--- a/unet_pc.ipynb
+++ b/unet_pc.ipynb
@@ -15,10 +15,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe283a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###############################################################################\n",
+    "# BSD 3-Clause License\n",
+    "#\n",
+    "# Copyright (c) 2018, NVIDIA CORPORATION. All rights reserved.\n",
+    "#\n",
+    "# Author & Contact: Guilin Liu (guilinl@nvidia.com)\n",
+    "###############################################################################\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch import nn, cuda\n",
+    "from torch.autograd import Variable\n",
+    "\n",
+    "class PartialConv2d(nn.Conv2d):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "\n",
+    "        # whether the mask is multi-channel or not\n",
+    "        if 'multi_channel' in kwargs:\n",
+    "            self.multi_channel = kwargs['multi_channel']\n",
+    "            kwargs.pop('multi_channel')\n",
+    "        else:\n",
+    "            self.multi_channel = False  \n",
+    "\n",
+    "        if 'return_mask' in kwargs:\n",
+    "            self.return_mask = kwargs['return_mask']\n",
+    "            kwargs.pop('return_mask')\n",
+    "        else:\n",
+    "            self.return_mask = False\n",
+    "\n",
+    "        super(PartialConv2d, self).__init__(*args, **kwargs)\n",
+    "\n",
+    "        if self.multi_channel:\n",
+    "            self.weight_maskUpdater = torch.ones(self.out_channels, self.in_channels, self.kernel_size[0], self.kernel_size[1])\n",
+    "        else:\n",
+    "            self.weight_maskUpdater = torch.ones(1, 1, self.kernel_size[0], self.kernel_size[1])\n",
+    "            \n",
+    "        self.slide_winsize = self.weight_maskUpdater.shape[1] * self.weight_maskUpdater.shape[2] * self.weight_maskUpdater.shape[3]\n",
+    "\n",
+    "        self.last_size = (None, None, None, None)\n",
+    "        self.update_mask = None\n",
+    "        self.mask_ratio = None\n",
+    "\n",
+    "    def forward(self, input, mask_in=None):\n",
+    "        assert len(input.shape) == 4\n",
+    "        if mask_in is not None or self.last_size != tuple(input.shape):\n",
+    "            self.last_size = tuple(input.shape)\n",
+    "\n",
+    "            with torch.no_grad():\n",
+    "                if self.weight_maskUpdater.type() != input.type():\n",
+    "                    self.weight_maskUpdater = self.weight_maskUpdater.to(input)\n",
+    "\n",
+    "                if mask_in is None:\n",
+    "                    # if mask is not provided, create a mask\n",
+    "                    if self.multi_channel:\n",
+    "                        mask = torch.ones(input.data.shape[0], input.data.shape[1], input.data.shape[2], input.data.shape[3]).to(input)\n",
+    "                    else:\n",
+    "                        mask = torch.ones(1, 1, input.data.shape[2], input.data.shape[3]).to(input)\n",
+    "                else:\n",
+    "                    mask = mask_in\n",
+    "                        \n",
+    "                self.update_mask = F.conv2d(mask, self.weight_maskUpdater, bias=None, stride=self.stride, padding=self.padding, dilation=self.dilation, groups=1)\n",
+    "\n",
+    "                # for mixed precision training, change 1e-8 to 1e-6\n",
+    "                self.mask_ratio = self.slide_winsize/(self.update_mask + 1e-8)\n",
+    "                # self.mask_ratio = torch.max(self.update_mask)/(self.update_mask + 1e-8)\n",
+    "                self.update_mask = torch.clamp(self.update_mask, 0, 1)\n",
+    "                self.mask_ratio = torch.mul(self.mask_ratio, self.update_mask)\n",
+    "\n",
+    "\n",
+    "        raw_out = super(PartialConv2d, self).forward(torch.mul(input, mask) if mask_in is not None else input)\n",
+    "\n",
+    "        if self.bias is not None:\n",
+    "            bias_view = self.bias.view(1, self.out_channels, 1, 1)\n",
+    "            output = torch.mul(raw_out - bias_view, self.mask_ratio) + bias_view\n",
+    "            output = torch.mul(output, self.update_mask)\n",
+    "        else:\n",
+    "            output = torch.mul(raw_out, self.mask_ratio)\n",
+    "\n",
+    "\n",
+    "        if self.return_mask:\n",
+    "            return output, self.update_mask\n",
+    "        else:\n",
+    "            return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f6acdf5e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
@@ -57,26 +153,26 @@
     "        x = self.conv1_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv1_2(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = F.max_pool2d(x, 2)\n",
+    "        cat_1 = F.relu(x)\n",
+    "        x = F.max_pool2d(cat_1, 2)\n",
     "        \n",
     "        x = self.conv2_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv2_2(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = F.max_pool2d(x, 2)\n",
+    "        cat_2 = F.relu(x)\n",
+    "        x = F.max_pool2d(cat_2, 2)\n",
     "        \n",
     "        x = self.conv3_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv3_2(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = F.max_pool2d(x, 2)\n",
+    "        cat_3 = F.relu(x)\n",
+    "        x = F.max_pool2d(cat_3, 2)\n",
     "        \n",
     "        x = self.conv4_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv4_2(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = F.max_pool2d(x, 2)\n",
+    "        cat_4 = F.relu(x)\n",
+    "        x = F.max_pool2d(cat_4, 2)\n",
     "        \n",
     "        x = self.conv5_1(x)\n",
     "        x = F.relu(x)\n",
