--- a/unet_pc.ipynb
+++ b/unet_pc.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe283a45",
+   "id": "89c3c27a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,10 +111,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
@@ -133,15 +129,19 @@
     "        \n",
     "        self.conv5_1 = nn.Conv2d(512,1024,3,1)\n",
     "        self.conv5_2 = nn.Conv2d(1024,1024,3,1)\n",
+    "        self.part2d_1 = PartialConv2d(1024,1024,2,1)\n",
     "        \n",
     "        self.conv6_1 = nn.Conv2d(1024,512,3,1)\n",
     "        self.conv6_2 = nn.Conv2d(512,512,3,1)\n",
+    "        self.part2d_2 = PartialConv2d(512,512,2,1)\n",
     "        \n",
     "        self.conv7_1 = nn.Conv2d(512,256,3,1)\n",
     "        self.conv7_2 = nn.Conv2d(256,256,3,1)\n",
+    "        self.part2d_3 = PartialConv2d(256,256,2,1)\n",
     "        \n",
     "        self.conv8_1 = nn.Conv2d(256,128,3,1)\n",
     "        self.conv8_2 = nn.Conv2d(128,128,3,1)\n",
+    "        self.part2d_4 = PartialConv2d(128,128,2,1)\n",
     "        \n",
     "        self.conv9_1 = nn.Conv2d(128,64,3,1)\n",
     "        self.conv9_2 = nn.Conv2d(64,64,3,1)\n",
@@ -178,38 +178,48 @@
     "        x = F.relu(x)\n",
     "        x = self.conv5_2(x)\n",
     "        x = F.relu(x)\n",
-    "        #\n",
+    "        x = part2d_1(x)\n",
     "        \n",
+    "        x = torch.cat([cat_4,x], dim=1)\n",
     "        x = self.conv6_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv6_2(x)\n",
     "        x = F.relu(x)\n",
-    "        #\n",
+    "        x = part2d_2(x)\n",
     "        \n",
+    "        x = torch.cat([cat_3,x], dim=1)\n",
     "        x = self.conv7_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv7_2(x)\n",
     "        x = F.relu(x)\n",
-    "        #\n",
+    "        x = part2d_3(x)\n",
     "        \n",
+    "        x = torch.cat([cat_2,x], dim=1)\n",
     "        x = self.conv8_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv8_2(x)\n",
     "        x = F.relu(x)\n",
-    "        #\n",
+    "        x = part2d_4(x)\n",
     "        \n",
+    "        x = torch.cat([cat_1,x], dim=1)\n",
     "        x = self.conv9_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv9_2(x)\n",
     "        x = F.relu(x)\n",
-    "        #\n",
     "        \n",
     "        x = self.conv10(x)\n",
     "        \n",
     "my_nn = Net()\n",
-    "print(my_nn)\n",
-    "    "
+    "print(my_nn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c947ab2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
