--- a/unet_pc.ipynb
+++ b/unet_pc.ipynb
@@ -209,17 +209,102 @@
     "        \n",
     "        x = self.conv10(x)\n",
     "        \n",
+    "        return x\n",
+    "        \n",
     "my_nn = Net()\n",
     "print(my_nn)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "bc203adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\project_stuff\\mask_off\\img\n",
+      " D 드라이브의 볼륨: 새 볼륨\n",
+      " 볼륨 일련 번호: 5A4F-87F6\n",
+      "\n",
+      " D:\\project_stuff\\mask_off\\img 디렉터리\n",
+      "\n",
+      "2021-08-09  오후 02:20    <DIR>          .\n",
+      "2021-08-09  오후 02:20    <DIR>          ..\n",
+      "2016-03-23  오후 07:46    <DIR>          img_align_celeba_png\n",
+      "2021-08-09  오후 02:29    <DIR>          mask_on_png\n",
+      "2021-08-09  오후 02:20    <DIR>          org\n",
+      "               0개 파일                   0 바이트\n",
+      "               5개 디렉터리  519,149,273,088 바이트 남음\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /project_stuff/mask_off/img\n",
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c947ab2e",
+   "id": "32618865",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#import \n",
+    "\n",
+    "target_dir = './img_align_celeba_png'\n",
+    "train_dir = './mask_on_png'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98905df8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html, temporary\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bd308b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(2):  # loop over the dataset multiple times\n",
+    "\n",
+    "    running_loss = 0.0\n",
+    "    for i, data in enumerate(trainloader, 0):\n",
+    "        # get the inputs; data is a list of [inputs, labels]\n",
+    "        inputs, labels = data\n",
+    "\n",
+    "        # zero the parameter gradients\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # forward + backward + optimize\n",
+    "        outputs = net(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # print statistics\n",
+    "        running_loss += loss.item()\n",
+    "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
+    "            print('[%d, %5d] loss: %.3f' %\n",
+    "                  (epoch + 1, i + 1, running_loss / 2000))\n",
+    "            running_loss = 0.0\n",
+    "\n",
+    "print('Finished Training')"
+   ]
   }
  ],
  "metadata": {
