--- a/unet_pc.ipynb
+++ b/unet_pc.ipynb
@@ -146,8 +146,7 @@
     "        self.conv9_1 = nn.Conv2d(128,64,3,1)\n",
     "        self.conv9_2 = nn.Conv2d(64,64,3,1)\n",
     "        \n",
-    "        self.conv10 = nn.Conv2d(64,2,1,1)\n",
-    "        \n",
+    "        self.conv10 = nn.Conv2d(64,3,1,1)\n",
     "        \n",
     "    def forward(self. x):\n",
     "        x = self.conv1_1(x)\n",
@@ -253,10 +252,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import \n",
+    "import torch.utils.data.Dataset as Dataset\n",
+    "import torch.utils.data.DataLoader as DataLoader\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
     "\n",
-    "target_dir = './img_align_celeba_png'\n",
-    "train_dir = './mask_on_png'"
+    "img_root = './train_set'\n",
+    "\n",
+    "trans = transforms.Compose([transforms.ToTensor(),transform.Normalize((0.5,0.5,0.5), (0.5,0.5,0.5))])\n",
+    "\n",
+    "trainset = torchvision.datasets.ImageFolder(root = img_root, transform = trans)\n",
+    "classes = trainset.classes\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "#https://data-panic.tistory.com/21\n",
+    "#https://data-panic.tistory.com/13\n",
+    "\n",
+    "class CustomDataset(Dataset):\n",
+    "    def __init__(self, x, train=True):\n",
+    "        pass\n",
+    "           \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        img, target = self.data[idx], self.targets[idx]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93987d1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainloader = DataLoader(trainset, batch_size = 10, shuffle = False, num_workers = 2)"
    ]
   },
   {
@@ -269,8 +301,8 @@
     "# from https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html, temporary\n",
     "import torch.optim as optim\n",
     "\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(my_nn.parameters(), lr=0.001) # momentum=0.9 "
    ]
   },
   {
@@ -280,30 +312,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(2):  # loop over the dataset multiple times\n",
+    "for epoch in range(200):  # loop over the dataset multiple times\n",
     "\n",
     "    running_loss = 0.0\n",
-    "    for i, data in enumerate(trainloader, 0):\n",
-    "        # get the inputs; data is a list of [inputs, labels]\n",
-    "        inputs, labels = data\n",
+    "    for i, data in enumerate(trainloader):\n",
+    "        inputs, targets = data\n",
     "\n",
-    "        # zero the parameter gradients\n",
     "        optimizer.zero_grad()\n",
     "\n",
     "        # forward + backward + optimize\n",
-    "        outputs = net(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
+    "        out = my_nn(inputs)\n",
+    "        loss = criterion(out, targets)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        # print statistics\n",
     "        running_loss += loss.item()\n",
-    "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
+    "        if i % 5 == 4:    # print every 2000 mini-batches\n",
     "            print('[%d, %5d] loss: %.3f' %\n",
     "                  (epoch + 1, i + 1, running_loss / 2000))\n",
     "            running_loss = 0.0\n",
     "\n",
     "print('Finished Training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f0a801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n"
    ]
   }
  ],
