--- a/unet_pc.ipynb
+++ b/unet_pc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89c3c27a",
    "metadata": {},
    "outputs": [],
@@ -106,10 +106,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f6acdf5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net(\n",
+      "  (conv1_1): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv1_2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv2_1): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv2_2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv3_1): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv3_2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv4_1): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv4_2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv5_1): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv5_2): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (part2d_1): PartialConv2d(1024, 1024, kernel_size=(2, 2), stride=(1, 1))\n",
+      "  (conv6_1): Conv2d(1024, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv6_2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (part2d_2): PartialConv2d(512, 512, kernel_size=(2, 2), stride=(1, 1))\n",
+      "  (conv7_1): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv7_2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (part2d_3): PartialConv2d(256, 256, kernel_size=(2, 2), stride=(1, 1))\n",
+      "  (conv8_1): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv8_2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (part2d_4): PartialConv2d(128, 128, kernel_size=(2, 2), stride=(1, 1))\n",
+      "  (conv9_1): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv9_2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv10): Conv2d(64, 3, kernel_size=(1, 1), stride=(1, 1))\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
@@ -148,7 +180,7 @@
     "        \n",
     "        self.conv10 = nn.Conv2d(64,3,1,1)\n",
     "        \n",
-    "    def forward(self. x):\n",
+    "    def forward(self, x):\n",
     "        x = self.conv1_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.conv1_2(x)\n",
@@ -216,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bc203adc",
    "metadata": {},
    "outputs": [
@@ -224,76 +256,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\project_stuff\\mask_off\\img\n",
+      "D:\\project_stuff\\mask_off\\mask-offf-doodle\n",
       " D 드라이브의 볼륨: 새 볼륨\n",
       " 볼륨 일련 번호: 5A4F-87F6\n",
       "\n",
-      " D:\\project_stuff\\mask_off\\img 디렉터리\n",
+      " D:\\project_stuff\\mask_off\\mask-offf-doodle 디렉터리\n",
       "\n",
-      "2021-08-09  오후 02:20    <DIR>          .\n",
-      "2021-08-09  오후 02:20    <DIR>          ..\n",
-      "2016-03-23  오후 07:46    <DIR>          img_align_celeba_png\n",
-      "2021-08-09  오후 02:29    <DIR>          mask_on_png\n",
-      "2021-08-09  오후 02:20    <DIR>          org\n",
-      "               0개 파일                   0 바이트\n",
-      "               5개 디렉터리  519,149,273,088 바이트 남음\n"
+      "2021-08-30  오후 02:55    <DIR>          .\n",
+      "2021-08-30  오후 02:55    <DIR>          ..\n",
+      "2021-08-02  오후 02:53    <DIR>          .ipynb_checkpoints\n",
+      "2021-08-23  오후 03:14    <DIR>          data\n",
+      "2021-07-26  오후 05:51                18 README.md\n",
+      "2021-08-30  오후 02:55            12,968 unet_pc.ipynb\n",
+      "               2개 파일              12,986 바이트\n",
+      "               4개 디렉터리  497,456,951,296 바이트 남음\n"
      ]
     }
    ],
    "source": [
-    "%cd /project_stuff/mask_off/img\n",
+    "%cd /project_stuff/mask_off/mask-offf-doodle\n",
     "%ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "32618865",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.utils.data.Dataset as Dataset\n",
-    "import torch.utils.data.DataLoader as DataLoader\n",
-    "import torchvision\n",
-    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "#from torchvision import transforms\n",
+    "from glob import glob\n",
     "\n",
-    "img_root = './train_set'\n",
+    "img_root = './data'\n",
     "\n",
+    "'''\n",
     "trans = transforms.Compose([transforms.ToTensor(),transform.Normalize((0.5,0.5,0.5), (0.5,0.5,0.5))])\n",
     "\n",
     "trainset = torchvision.datasets.ImageFolder(root = img_root, transform = trans)\n",
     "classes = trainset.classes\n",
     "\n",
+    "'''\n",
     "\n",
-    "\"\"\"\n",
     "#https://data-panic.tistory.com/21\n",
     "#https://data-panic.tistory.com/13\n",
     "\n",
+    "DATA_INPUT_LIST = glob(img_root + '/input_png/*.png')\n",
+    "DATA_TARGET_LIST = glob(img_root + '/target_png/*.png')\n",
+    "\n",
+    "#https://www.kaeee.de/2021/04/29/pytorch-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EB%A1%9C%EB%8D%94-%EB%A7%8C%EB%93%A4%EA%B8%B0.html\n",
     "class CustomDataset(Dataset):\n",
-    "    def __init__(self, x, train=True):\n",
-    "        pass\n",
+    "    def __init__(self, input_list, target_list, transform=None):\n",
+    "        self.input_list = input_list\n",
+    "        self.target_list = target_list\n",
+    "        self.transform = transform\n",
     "           \n",
     "    def __len__(self):\n",
-    "        return len(self.data)\n",
+    "        return len(self.input_list)\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        img, target = self.data[idx], self.targets[idx]\n",
-    "\"\"\""
+    "        img_input, img_target = self.input_list[idx], self.target_list[idx]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "93987d1e",
+   "execution_count": 11,
+   "id": "ce0b5d14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainloader = DataLoader(trainset, batch_size = 10, shuffle = False, num_workers = 2)"
+    "trainloader = DataLoader(\n",
+    "    CustomDataset(\n",
+    "        DATA_INPUT_LIST,\n",
+    "        DATA_TARGET_LIST,\n",
+    "        None\n",
+    "    ),\n",
+    "    batch_size = 10, shuffle = False, num_workers = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "98905df8",
    "metadata": {},
    "outputs": [],
@@ -307,10 +351,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a9bd308b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "DataLoader worker (pid(s) 26788, 29324) exited unexpectedly",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mEmpty\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m~\\anaconda3\\envs\\mask_off\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m_try_get_data\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    778\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 779\u001b[1;33m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data_queue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    780\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\mask_off\\lib\\multiprocessing\\queues.py\u001b[0m in \u001b[0;36mget\u001b[1;34m(self, block, timeout)\u001b[0m\n\u001b[0;32m    104\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_poll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m                         \u001b[1;32mraise\u001b[0m \u001b[0mEmpty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m                 \u001b[1;32melif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_poll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mEmpty\u001b[0m: ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-031a9e3ccca0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mrunning_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrainloader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\mask_off\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    361\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    362\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 363\u001b[1;33m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    364\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    365\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIterable\u001b[0m \u001b[1;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\mask_off\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    972\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    973\u001b[0m             \u001b[1;32massert\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_shutdown\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_tasks_outstanding\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 974\u001b[1;33m             \u001b[0midx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    975\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_tasks_outstanding\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    976\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\mask_off\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m_get_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    939\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    940\u001b[0m             \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 941\u001b[1;33m                 \u001b[0msuccess\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_try_get_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    942\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0msuccess\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    943\u001b[0m                     \u001b[1;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\mask_off\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\u001b[0m in \u001b[0;36m_try_get_data\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    790\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfailed_workers\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    791\u001b[0m                 \u001b[0mpids_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m', '\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpid\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfailed_workers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 792\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'DataLoader worker (pid(s) {}) exited unexpectedly'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpids_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    793\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mqueue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEmpty\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    794\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: DataLoader worker (pid(s) 26788, 29324) exited unexpectedly"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(200):  # loop over the dataset multiple times\n",
     "\n",
@@ -328,7 +393,7 @@
     "\n",
     "        # print statistics\n",
     "        running_loss += loss.item()\n",
-    "        if i % 5 == 4:    # print every 2000 mini-batches\n",
+    "        if i % 5 == 4:    # print every 5 mini-batches\n",
     "            print('[%d, %5d] loss: %.3f' %\n",
     "                  (epoch + 1, i + 1, running_loss / 2000))\n",
     "            running_loss = 0.0\n",
@@ -339,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1f0a801",
+   "id": "4effd28d",
    "metadata": {},
    "outputs": [],
    "source": [
